kubecost/require-kubecost-labels/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    foo: bar
  name: badpod01
spec:
  containers:
    - name: busybox
      image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    foo: bar
    env: foo
  name: badpod02
spec:
  containers:
    - name: busybox
      image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    foo: bar
    owner: foo
    team: bar
    department: foo
    app: bar
  name: badpod03
spec:
  containers:
    - name: busybox
      image: busybox:1.35
