kubecost/require-kubecost-labels/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeploy01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        foo: bar
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeploy02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        owner: "foo"
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            foo: bar
        spec:
          containers:
          - name: hello
            image: busybox:1.35
            command:
            - "sleep"
            - "3600"
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            owner: "foo"
            team: "foo"
        spec:
          containers:
          - name: hello
            image: busybox:1.35
            command:
            - "sleep"
            - "3600"
          restartPolicy: OnFailure
