kubecost/require-kubecost-labels/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeploy01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
        owner: "foo"
        team: "foo"
        department: "foo"
        env: "foo"
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeploy02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
        owner: "foo"
        team: "foo"
        department: "foo"
        env: "foo"
        foo: bar
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            owner: "foo"
            team: "foo"
            department: "foo"
            app: "foo"
            env: "foo"
        spec:
          containers:
          - name: hello
            image: ghcr.io/kyverno/test-busybox:1.35
            command:
            - "sleep"
            - "3600"
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            owner: "foo"
            team: "foo"
            department: "foo"
            app: "foo"
            env: "foo"
            foo: bar
        spec:
          containers:
          - name: hello
            image: ghcr.io/kyverno/test-busybox:1.35
            command:
            - "sleep"
            - "3600"
          restartPolicy: OnFailure
